appId: com.anonymous.ineedhelp
name: Check Emergency Screen
---
- tapOn: 'SOS'
- assertVisible: 'Max Mustermann'
- assertVisible: '25'
- assertVisible: '65.5 kg'
- assertVisible: '175 cm'
- assertVisible: 'A+'
- retry:
      maxRetries: 5
      commands:
          - tapOn: 'Schließen'
